src/applications/srto/srto-worker/srto-canvas/srto-canvas.css
.srtoCanvasContainer {
    position: relative;
    display: block;
    width: 100vw;
    height: 100vh;
}

.srto-canvas {
    display: block;
    width: 100%;
    height: 100%;
    /* background-color: rgb(28, 28, 28); */
}

.hoverTooltip {
    position: absolute;
    display: flex;
    gap: 15px;
    flex-direction: row;
    background: rgb(0, 0, 0);
    border: 1px solid rgba(255, 255, 255, 0.3);
    border-radius: 4px;
    padding: 6px 10px;
    color: #fff;
    font-size: 13px;
    line-height: 1.5;
    pointer-events: none;
    white-space: nowrap;
    z-index: 50;
}

.tooltip-info {
    display: flex;
    flex-direction: column;
    gap: 1px;
}

.tooltip-title,
.tooltip-route-title {
    font-weight: bold;
    font-size: 15px;
}

.tooltip-subtitle {
    color: rgba(255, 255, 255, 0.6)
}

.tooltip-route {
    display: flex;
    flex-direction: column;
    gap: 0px;
    margin-top: 2px;
    margin-bottom: 2px;
}

.tooltip-traindata-title {
    font-weight: bold;
    font-size: 15px;
}
.tooltip-control {
    margin-top: 2px;
    font-size: 12px;
    color: rgb(0, 200, 200);
}

.infoContainer {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 100;
    width: 100%;
    height: 40px;
    padding: 0 10px;
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: baseline;
    align-items: center;
    gap: 25px;
    /* padding: 6px 10px; */
    border-top: 1px solid rgba(255, 255, 255, 0.35);
    background: rgba(0, 0, 0, 1);
    color: #fff;
    font-size: 20px;
    line-height: 1;
    pointer-events: none;
}

.versionInfo {
    display: flex;
    font-size: 10px;
    flex-direction: row;
    height: 75%;
    margin-left: auto;
    justify-content: flex-end;
    align-items: end;
    text-align: right;
}

.trainTooltip-signalImage {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: end;
    width: 56px;
    /* height: ; */
    /* padding: 4px 4px; */
    /* border: 1px solid rgba(255, 255, 255, 0.35); */
    border-radius: 5px;
}
.signalImage-svg {
    width: 100%;
    height: 100%;
}

.signalLamp {
    r: 11;
    stroke-width: 2;
    stroke: black;
}
.lampOff {
    fill: black;
}
.redLamp {
    fill: red;
}
.orangeLamp {
    fill: orange;
}
.greenLamp {
    fill: lime;
}
.speedBar{
    stroke: black;
    stroke-width: 1;
}
.offBar {
    fill: black;
}
.greenBar {
    fill: lime;
}
.orangeBar {
    fill: orange;
}
.redLamp_Blinking {
    animation: blinkingSignalLampAnimation_RedLamp 2s ease infinite;
}
.orangeLamp_Blinking {
    animation: blinkingSignalLampAnimation_OrangeLamp 2s ease infinite;
}
.greenLamp_Blinking {
    animation: blinkingSignalLampAnimation_GreenLamp 2s ease infinite;
}
@keyframes blinkingSignalLampAnimation_RedLamp {
    0% {
        fill: black;
    }

    25% {
        fill: red;
    }

    75% {
        fill: red;
    }

    100% {
        fill: black;
    }
}
@keyframes blinkingSignalLampAnimation_OrangeLamp {
    0% {
        fill: black;
    }

    25% {
        fill: orange;
    }

    75% {
        fill: orange;
    }

    100% {
        fill: black;
    }
}
@keyframes blinkingSignalLampAnimation_GreenLamp {
    0% {
        fill: black;
    }

    25% {
        fill: lime;
    }

    75% {
        fill: lime;
    }

    100% {
        fill: black;
    }
}





.devInfoContainer {
    position: absolute;
    box-sizing: content-box;
    bottom: 50px;
    right: 10px;
    padding: 8px 8px;
    border: 1px solid red;
    border-radius: 10px;
    background-color: black;
    overflow: hidden;
    text-wrap: nowrap;
    transition: 0.5s ease;
}
.devInfoVisible {
    max-width: 500px;
    max-height: 300px;
}
.devInfoHidden {
    max-width: 35px;
    max-height: 30px;
}
.devInfo-title {
    font-size: 22px;
    font-weight: 600;
    padding: 4px 0;
}

.devInfoBox {
    display: flex;
    flex-direction: column;
    height: 100%;
    gap: 2px;
    padding: 0 10px;
    margin-left: auto;
    justify-content: flex-end;
    align-items: baseline;
}

